--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 ExplicitImports = "1"
 HTTP = "1"
 JSON3 = "1"
-JuliaFormatter = "1"
+JuliaFormatter = "1, 2"
 julia = "1.6"
 
 [extras]
